--- a/.qas-data/.project
+++ b/.qas-data/.project
@@ -5,25 +5,21 @@
             "apppackage": "com.qmetry.bank.bankingapplication"
         },
         "mobileweb": {
-            "baseurl": "http://www.gmail.com"
+            "baseurl": "https://www.gmail.com"
         },
         "web": {
-            "baseurl": "http://www.gmail.com"
-        },
-        "windows": {
-            "appname": "Microsoft.WindowsCalculator_8wekyb3d8bbwe!App"
+            "baseurl": "https://www.gmail.com"
         }
     },
-    "framework": "behave",
+    "framework": "robot",
     "language": "python",
     "projectSettings": {
-        "projectName": "Python_Behave",
+        "projectName": "Python_Robot",
         "projectPath": "c:\\Users\\rinkesh.jain\\Desktop\\Sample"
     },
     "projectTypes": [
         "web",
         "mobileweb",
-        "windows",
         "android"
     ]
 }
