--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,6 +1,6 @@
 env.baseurl=http://www.google.com
-env.resources = resources;resources/android
-platform=android
+env.resources = resources;resources/<PLATFORM>
+platform=<PLATFORM>
 remote.server = http://localhost:
 remote.port = 4723
 # driver.name = chrome
