--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ docutils >= 0.14
 robotframework >= 3.1.1
 robotframework-appiumlibrary>=1.5.0.2
 robotframework-seleniumlibrary>=3.3.1
+schedule >= 0.6.0
